PDF alignment fix

--- a/src/pages/Neuro.css
+++ b/src/pages/Neuro.css
@@ -7,6 +7,7 @@
 }
 
 .document-grid {
+    justify-content: center;
     display: grid;
     grid-template-rows: 1fr auto;
     height: 85vh; /* Full viewport height */
@@ -14,6 +15,8 @@
 }
 
 .item1, .item2 {
+    width: 100vw;
+    max-width: 1000px;
     display: none; /* Initially hidden */
 }
 
